# fastAPI

./: README.md  database.py  models.py  pyproject.toml
migrations/: env.py
migrations/versions/: 16a42567fe47_create_users_table.py
src/fast_zero/: app.py  database.py  schemas.py  security.py  settings.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
